# discot

./: .gitignore  Makefile  NAME  README  addon  discot.js  package-lock.json  package.json
.github/workflows/: docs.yml
Documentation/: Makefile  conf.py  index.rst
Documentation/command/: index.rst
Documentation/dev-tools/: index.rst  install.rst
Documentation/hacking/: index.rst  upload-command.rst  write-command.rst
Documentation/images/: favicon.png-NOREDIST  logo.svg-NOREDIST
Documentation/sphinx/: static  templates
Documentation/sphinx/static/: custom.css  font.css  layout.css  toc.css
Documentation/sphinx/templates/: discot-toc.html
LICENSES/: favicon.png-NOREDIST  logo.svg-NOREDIST
addon/: CMakeLists.txt  discot.c  discot.cjs  discot.node  rand.c
addon/include/: calc.h  compiler.h  funcdef.h  iter.h  stringify.h
commands/: back.js  drop.js  feed.js  loop.js  next.js  pause.js  play.js  resume.js  shuffle.js  skip.js  stop.js
lib/: array.js  barrier.js  cat.js  cmeta.js  confirm.js  deasync.js  dismas.js  disutil.js  feature.js  meta.js  muctx.js  mutex.js  sleep.js  tercol.js  term.js  termas.js
musrc/: youtube.js
scripts/: bump-version.sh  install.js  reload.js  remove.js
